updates for sfe

--- a/experiments/fit_ml_models/fit_weighted_average_classifier.ipynb
+++ b/experiments/fit_ml_models/fit_weighted_average_classifier.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1e48a003",
    "metadata": {},
    "outputs": [
@@ -123,9 +123,34 @@
       "lookup_file: /home/monte.flora/python_packages/WoF_post/wofs/data/psadilookup.dat\n",
       "\n",
       " Hazard: WIND_SEVERE_0KM....Time : FIRST_HOUR\n",
-      "Classifier Weights: [0.51104317 0.48895683]\n",
+      "Classifier Weights: [(0.5038458988384041, 'LogisticRegression'), (0.496154101161596, 'XGBoost')]\n",
       "\n",
-      " Hazard: WIND_SEVERE_0KM....Time : SECOND_HOUR\n"
+      " Hazard: WIND_SEVERE_0KM....Time : SECOND_HOUR\n",
+      "Classifier Weights: [(0.5163010844857072, 'LogisticRegression'), (0.48369891551429284, 'XGBoost')]\n",
+      "\n",
+      " Hazard: HAIL_SEVERE_0KM....Time : FIRST_HOUR\n",
+      "Classifier Weights: [(0.49320022709895833, 'LogisticRegression'), (0.5067997729010416, 'XGBoost')]\n",
+      "\n",
+      " Hazard: HAIL_SEVERE_0KM....Time : SECOND_HOUR\n",
+      "Classifier Weights: [(0.49559241368089957, 'LogisticRegression'), (0.5044075863191004, 'XGBoost')]\n",
+      "\n",
+      " Hazard: TORNADO_SEVERE_0KM....Time : FIRST_HOUR\n",
+      "Classifier Weights: [(0.48828552326542174, 'LogisticRegression'), (0.5117144767345784, 'XGBoost')]\n",
+      "\n",
+      " Hazard: TORNADO_SEVERE_0KM....Time : SECOND_HOUR\n",
+      "Classifier Weights: [(0.4799149173674372, 'LogisticRegression'), (0.5200850826325629, 'XGBoost')]\n",
+      "\n",
+      " Hazard: ALL_SEVERE....Time : FIRST_HOUR\n",
+      "Classifier Weights: [(0.49786505313540586, 'LogisticRegression'), (0.5021349468645941, 'XGBoost')]\n",
+      "\n",
+      " Hazard: ALL_SEVERE....Time : SECOND_HOUR\n",
+      "Classifier Weights: [(0.49704891823764036, 'LogisticRegression'), (0.5029510817623597, 'XGBoost')]\n",
+      "\n",
+      " Hazard: ALL_SIG_SEVERE....Time : FIRST_HOUR\n",
+      "Classifier Weights: [(0.5167731669226003, 'LogisticRegression'), (0.4832268330773998, 'XGBoost')]\n",
+      "\n",
+      " Hazard: ALL_SIG_SEVERE....Time : SECOND_HOUR\n",
+      "Classifier Weights: [(0.47860181085556835, 'LogisticRegression'), (0.5213981891444316, 'XGBoost')]\n"
      ]
     }
    ],
@@ -134,14 +159,12 @@
     "\n",
     "times = ['first_hour', 'second_hour']\n",
     "config_path = '/home/monte.flora/python_packages/wofs_ml_severe/wofs_ml_severe/conf/ml_config_realtime.yml'\n",
-    "targets = ['wind_severe_0km']\n",
+    "targets = ['wind_severe_0km', 'hail_severe_0km', 'tornado_severe_0km', 'all_severe', 'all_sig_severe']\n",
     "model_names = ['LogisticRegression', 'XGBoost'] \n",
-    "\n",
     "\n",
     "ml_config = load_yaml(config_path)\n",
     "OUT_PATH = '/work/mflora/ML_DATA/NEW_ML_MODELS'  \n",
     "retro_str = 'realtime'\n",
-    "    \n",
     "    \n",
     "for target, time in itertools.product(targets, times):\n",
     "    print(f'\\n Hazard: {target.upper()}....Time : {time.upper()}')\n",
@@ -165,54 +188,65 @@
     "    # Fit the WeightedAverageClassifier\n",
     "    weights = get_weights(model_names, time, target)\n",
     "    clf = WeightedAverageClassifier(estimators,  weights=weights)\n",
-    "    #clf.fit(X, y)\n",
     "    clf.features = features\n",
-    "    \n",
     "    clf.save(os.path.join(OUT_PATH, f'Average_{target}_None_{time}_{retro_str}.joblib'))\n",
     "    \n",
-    "    print(f'Classifier Weights: {clf.weights_}')\n",
-    "\n",
-    "    \"\"\"\n",
-    "    # Load the old testing dataset. \n",
-    "    test_df = pd.read_feather(\n",
-    "        f'/work/mflora/ML_DATA/DATA/original_{time}_testing_matched_to_{target}_0km_data.feather')\n",
-    "\n",
-    "    X_test = test_df[features].astype(float)\n",
-    "    y_test = test_df[f'matched_to_{target}_0km'].astype(float)   \n",
-    "    y_pred = clf.predict_proba(X_test)[:,1]\n",
-    "    aupdc = average_precision_score(y_test, y_pred)\n",
-    "    bss = brier_skill_score(y_test, y_pred)\n",
-    "    print(f'AUPDC: {aupdc:.3f} BSS:{bss:.3f}')\n",
-    "\n",
-    "    model_name = 'Average'\n",
-    "    resample = None \n",
-    "    scaler =None\n",
-    "    drop_opt=''\n",
-    "\n",
-    "    clf.save(os.path.join(OUT_PATH, f'{model_name}_{time}_{target}_{resample}_{scaler}_{drop_opt}.pkl'))\n",
-    "    \n",
-    "    # RF score \n",
-    "    y_pred = estimators[1].predict_proba(X_test)[:,1]\n",
-    "    aupdc = average_precision_score(y_test, y_pred)\n",
-    "    bss = brier_skill_score(y_test, y_pred)\n",
-    "    print(f'RF....AUPDC: {aupdc:.3f} BSS:{bss:.3f}')\n",
-    "\n",
-    "    # Logistic regression score \n",
-    "    y_pred = estimators[0].predict_proba(X_test)[:,1]\n",
-    "    aupdc = average_precision_score(y_test, y_pred)\n",
-    "    bss = brier_skill_score(y_test, y_pred)\n",
-    "    print(f'LR....AUPDC: {aupdc:.3f} BSS:{bss:.3f}')\n",
-    "    \"\"\""
+    "    print(f'Classifier Weights: {list(zip(clf.weights_, model_names))}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8a98154f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WeightedAverageClassifier(estimators=[CalibratedClassifierCV(base_estimator=Pipeline(steps=[('imputer',\n",
+       "                                                                                             SimpleImputer(strategy='median')),\n",
+       "                                                                                            ('scaler',\n",
+       "                                                                                             StandardScaler()),\n",
+       "                                                                                            ('model',\n",
+       "                                                                                             LogisticRegression(C=0.01,\n",
+       "                                                                                                                l1_ratio=1.0,\n",
+       "                                                                                                                penalty='elasticnet',\n",
+       "                                                                                                                random_state=123,\n",
+       "                                                                                                                solver='saga'))]),\n",
+       "                                                             cv='None',\n",
+       "                                                             ensemble=False,\n",
+       "                                                             method='isotonic',\n",
+       "                                                             n_jobs=84),\n",
+       "                                      CalibratedClassifierCV(base...\n",
+       "                                                                                                           interaction_constraints=None,\n",
+       "                                                                                                           lambda=1e-05,\n",
+       "                                                                                                           learning_rate=0.1,\n",
+       "                                                                                                           max_bin=None,\n",
+       "                                                                                                           max_cat_threshold=None,\n",
+       "                                                                                                           max_cat_to_onehot=None,\n",
+       "                                                                                                           max_delta_step=None,\n",
+       "                                                                                                           max_depth=5,\n",
+       "                                                                                                           max_leaves=None,\n",
+       "                                                                                                           min_child_weight=3,\n",
+       "                                                                                                           missing=nan,\n",
+       "                                                                                                           monotone_constraints=None,\n",
+       "                                                                                                           n_estimators=300,\n",
+       "                                                                                                           n_jobs=None,\n",
+       "                                                                                                           num_parallel_tree=None, ...))]),\n",
+       "                                                             cv='None',\n",
+       "                                                             ensemble=False,\n",
+       "                                                             method='isotonic',\n",
+       "                                                             n_jobs=1)],\n",
+       "                          weights=array([0.47860181, 0.52139819]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Successfully loaded the weighted average classifier. \n",
+    "# Check that we can successfully load the weighted average classifier. \n",
     "parameters = {\n",
     "                'target' : target,\n",
     "                'time' : time, \n",
