--- a/wofs_ml_severe/explain/cbwofs_explainability_graphics.ipynb
+++ b/wofs_ml_severe/explain/cbwofs_explainability_graphics.ipynb
@@ -173,7 +173,7 @@
     "        plt.close(fig) \n",
     "        \n",
     "    def save_json(self, target): \n",
-    "        with open(f\"new_graphics/min_max_vals_{target}.json\", \"w\") as outfile:\n",
+    "        with open(f\"../json/min_max_vals_{target}.json\", \"w\") as outfile:\n",
     "            json.dump(self.max_min_val_dict, outfile)"
    ]
   },
@@ -188,33 +188,26 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b2fe57a8",
-   "metadata": {},
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "feature = 'w_down_time_min_ens_mean_of_10th'\n",
-    "y_train = X_train[f'matched_to_{target}_0km'].astype(float)\n",
-    "explainer = cbWoFSExplainabilityGraphics(X_train.astype(float), y_train)\n",
-    "explainer.create(feature)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c9058aef",
+   "execution_count": 3,
+   "id": "cf75a85d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib\n",
-    "model_dict = joblib.load(\n",
-    "    '/work/mflora/ML_DATA/NEW_ML_MODELS/LogisticRegression_wind_severe_0km_None_second_hour_realtime.joblib')"
+    "def get_target_str(target):\n",
+    "    # Initialize the kwargs for the hyperparameter optimization.\n",
+    "    if isinstance(target, list):\n",
+    "        if 'sig_severe' in target[0]:\n",
+    "            target = 'all_sig_severe'\n",
+    "        else:\n",
+    "            target = 'all_severe'\n",
+    "   \n",
+    "    return target "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "286808d9",
    "metadata": {},
    "outputs": [
@@ -223,6 +216,14 @@
      "output_type": "stream",
      "text": [
       "WIND_SEVERE_0KM\n",
+      "Only keeping warm season cases for the official training!\n",
+      "HAIL_SEVERE_0KM\n",
+      "Only keeping warm season cases for the official training!\n",
+      "TORNADO_SEVERE_0KM\n",
+      "Only keeping warm season cases for the official training!\n",
+      "ALL_SEVERE\n",
+      "Only keeping warm season cases for the official training!\n",
+      "ALL_SIG_SEVERE\n",
       "Only keeping warm season cases for the official training!\n"
      ]
     }
@@ -233,11 +234,16 @@
     "sys.path.insert(0, '/home/monte.flora/python_packages/WoF_post')\n",
     "from wofs_ml_severe.io.io import load_ml_data\n",
     "\n",
-    "\n",
-    "targets = ['wind_severe_0km']#, 'hail_severe_0km', 'hail_severe_0km', 'all_severe', 'all_sig_severe']\n",
+    "targets = ['wind_severe_0km', \n",
+    "           'hail_severe_0km', \n",
+    "           'tornado_severe_0km', \n",
+    "           ['wind_severe_0km', 'hail_severe_0km', 'tornado_severe_0km'],\n",
+    "           ['wind_sig_severe_0km', 'hail_sig_severe_0km', 'tornado_sig_severe_0km']\n",
+    "          ]\n",
     "\n",
     "for target in targets:\n",
-    "    print(target.upper())\n",
+    "    target_str = get_target_str(target)\n",
+    "    print(target_str.upper())\n",
     "    X_train, y_train, metadata = load_ml_data(target, \n",
     "                 lead_time = 'first_hour', \n",
     "                 mode = None, \n",
@@ -250,9 +256,9 @@
     "    \n",
     "    for feature in X_train.columns: \n",
     "        fig, _ = explainer.create(feature)\n",
-    "        explainer.save(fig, feature, target)\n",
+    "        explainer.save(fig, feature, target_str)\n",
     "        \n",
-    "    explainer.save_json(target)    "
+    "    explainer.save_json(target_str)    "
    ]
   },
   {
