updates for new real time

--- a/experiments/fit_ml_models/fit_weighted_average_classifier.ipynb
+++ b/experiments/fit_ml_models/fit_weighted_average_classifier.ipynb
@@ -120,37 +120,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lookup_file: /home/monte.flora/python_packages/WoF_post/wofs/data/psadilookup.dat\n",
       "\n",
       " Hazard: WIND_SEVERE_0KM....Time : FIRST_HOUR\n",
-      "Classifier Weights: [(0.5038458988384041, 'LogisticRegression'), (0.496154101161596, 'XGBoost')]\n",
+      "Classifier Weights: [(0.5339227974332283, 'LogisticRegression'), (0.4660772025667717, 'XGBoost')]\n",
       "\n",
       " Hazard: WIND_SEVERE_0KM....Time : SECOND_HOUR\n",
-      "Classifier Weights: [(0.5163010844857072, 'LogisticRegression'), (0.48369891551429284, 'XGBoost')]\n",
+      "Classifier Weights: [(0.525522062041453, 'LogisticRegression'), (0.4744779379585469, 'XGBoost')]\n",
       "\n",
       " Hazard: HAIL_SEVERE_0KM....Time : FIRST_HOUR\n",
-      "Classifier Weights: [(0.49320022709895833, 'LogisticRegression'), (0.5067997729010416, 'XGBoost')]\n",
+      "Classifier Weights: [(0.5132133180839746, 'LogisticRegression'), (0.48678668191602537, 'XGBoost')]\n",
       "\n",
       " Hazard: HAIL_SEVERE_0KM....Time : SECOND_HOUR\n",
-      "Classifier Weights: [(0.49559241368089957, 'LogisticRegression'), (0.5044075863191004, 'XGBoost')]\n",
+      "Classifier Weights: [(0.5036722983105061, 'LogisticRegression'), (0.4963277016894938, 'XGBoost')]\n",
       "\n",
       " Hazard: TORNADO_SEVERE_0KM....Time : FIRST_HOUR\n",
-      "Classifier Weights: [(0.48828552326542174, 'LogisticRegression'), (0.5117144767345784, 'XGBoost')]\n",
+      "Classifier Weights: [(0.48758181467755374, 'LogisticRegression'), (0.5124181853224462, 'XGBoost')]\n",
       "\n",
       " Hazard: TORNADO_SEVERE_0KM....Time : SECOND_HOUR\n",
-      "Classifier Weights: [(0.4799149173674372, 'LogisticRegression'), (0.5200850826325629, 'XGBoost')]\n",
+      "Classifier Weights: [(0.4968198361565161, 'LogisticRegression'), (0.503180163843484, 'XGBoost')]\n",
       "\n",
       " Hazard: ALL_SEVERE....Time : FIRST_HOUR\n",
-      "Classifier Weights: [(0.49786505313540586, 'LogisticRegression'), (0.5021349468645941, 'XGBoost')]\n",
+      "Classifier Weights: [(0.5108755001314864, 'LogisticRegression'), (0.48912449986851364, 'XGBoost')]\n",
       "\n",
       " Hazard: ALL_SEVERE....Time : SECOND_HOUR\n",
-      "Classifier Weights: [(0.49704891823764036, 'LogisticRegression'), (0.5029510817623597, 'XGBoost')]\n",
+      "Classifier Weights: [(0.503127558892854, 'LogisticRegression'), (0.496872441107146, 'XGBoost')]\n",
       "\n",
       " Hazard: ALL_SIG_SEVERE....Time : FIRST_HOUR\n",
-      "Classifier Weights: [(0.5167731669226003, 'LogisticRegression'), (0.4832268330773998, 'XGBoost')]\n",
+      "Classifier Weights: [(0.4912231028907625, 'LogisticRegression'), (0.5087768971092375, 'XGBoost')]\n",
       "\n",
       " Hazard: ALL_SIG_SEVERE....Time : SECOND_HOUR\n",
-      "Classifier Weights: [(0.47860181085556835, 'LogisticRegression'), (0.5213981891444316, 'XGBoost')]\n"
+      "Classifier Weights: [(0.478336154405071, 'LogisticRegression'), (0.521663845594929, 'XGBoost')]\n"
      ]
     }
    ],
@@ -163,7 +162,7 @@
     "model_names = ['LogisticRegression', 'XGBoost'] \n",
     "\n",
     "ml_config = load_yaml(config_path)\n",
-    "OUT_PATH = '/work/mflora/ML_DATA/NEW_ML_MODELS'  \n",
+    "OUT_PATH = '/work/mflora/ML_DATA/OPERATIONAL_MODELS'  \n",
     "retro_str = 'realtime'\n",
     "    \n",
     "for target, time in itertools.product(targets, times):\n",
@@ -201,48 +200,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "WeightedAverageClassifier(estimators=[CalibratedClassifierCV(base_estimator=Pipeline(steps=[('imputer',\n",
-       "                                                                                             SimpleImputer(strategy='median')),\n",
-       "                                                                                            ('scaler',\n",
-       "                                                                                             StandardScaler()),\n",
-       "                                                                                            ('model',\n",
-       "                                                                                             LogisticRegression(C=0.01,\n",
-       "                                                                                                                l1_ratio=1.0,\n",
-       "                                                                                                                penalty='elasticnet',\n",
-       "                                                                                                                random_state=123,\n",
-       "                                                                                                                solver='saga'))]),\n",
-       "                                                             cv='None',\n",
-       "                                                             ensemble=False,\n",
-       "                                                             method='isotonic',\n",
-       "                                                             n_jobs=84),\n",
-       "                                      CalibratedClassifierCV(base...\n",
-       "                                                                                                           interaction_constraints=None,\n",
-       "                                                                                                           lambda=1e-05,\n",
-       "                                                                                                           learning_rate=0.1,\n",
-       "                                                                                                           max_bin=None,\n",
-       "                                                                                                           max_cat_threshold=None,\n",
-       "                                                                                                           max_cat_to_onehot=None,\n",
-       "                                                                                                           max_delta_step=None,\n",
-       "                                                                                                           max_depth=5,\n",
-       "                                                                                                           max_leaves=None,\n",
-       "                                                                                                           min_child_weight=3,\n",
-       "                                                                                                           missing=nan,\n",
-       "                                                                                                           monotone_constraints=None,\n",
-       "                                                                                                           n_estimators=300,\n",
-       "                                                                                                           n_jobs=None,\n",
-       "                                                                                                           num_parallel_tree=None, ...))]),\n",
-       "                                                             cv='None',\n",
-       "                                                             ensemble=False,\n",
-       "                                                             method='isotonic',\n",
-       "                                                             n_jobs=1)],\n",
-       "                          weights=array([0.47860181, 0.52139819]))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/work/mflora/ML_DATA/NEW_ML_MODELS/Average_all_sig_severe_None_second_hour_realtime.joblib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 10\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Check that we can successfully load the weighted average classifier. \u001b[39;00m\n\u001b[1;32m      2\u001b[0m parameters \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      3\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m : target,\n\u001b[1;32m      4\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m : time, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mml_config\u001b[39m\u001b[38;5;124m'\u001b[39m : ml_config,\n\u001b[1;32m      8\u001b[0m             }\n\u001b[0;32m---> 10\u001b[0m model_dict \u001b[38;5;241m=\u001b[39m \u001b[43mload_ml_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparameters\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m model_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeatures\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     12\u001b[0m model_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/python_packages/wofs_ml_severe/wofs_ml_severe/io/load_ml_models.py:30\u001b[0m, in \u001b[0;36mload_ml_model\u001b[0;34m(retro, **parameters)\u001b[0m\n\u001b[1;32m     27\u001b[0m resample \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n\u001b[1;32m     28\u001b[0m model_fname \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresample\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mretro_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.joblib\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 30\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mjoblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_fname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model\n",
+      "File \u001b[0;32m/work/mflora/miniconda3/envs/wofs_post/lib/python3.8/site-packages/joblib/numpy_pickle.py:650\u001b[0m, in \u001b[0;36mload\u001b[0;34m(filename, mmap_mode)\u001b[0m\n\u001b[1;32m    648\u001b[0m         obj \u001b[38;5;241m=\u001b[39m _unpickle(fobj)\n\u001b[1;32m    649\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 650\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m    651\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m _read_fileobject(f, filename, mmap_mode) \u001b[38;5;28;01mas\u001b[39;00m fobj:\n\u001b[1;32m    652\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(fobj, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    653\u001b[0m                 \u001b[38;5;66;03m# if the returned file object is a string, this means we\u001b[39;00m\n\u001b[1;32m    654\u001b[0m                 \u001b[38;5;66;03m# try to load a pickle file generated with an version of\u001b[39;00m\n\u001b[1;32m    655\u001b[0m                 \u001b[38;5;66;03m# Joblib so we load it with joblib compatibility function.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/work/mflora/ML_DATA/NEW_ML_MODELS/Average_all_sig_severe_None_second_hour_realtime.joblib'"
+     ]
     }
    ],
    "source": [
