refactor explainability code

--- a/wofs_ml_severe/explain/monitor_data_drift.ipynb
+++ b/wofs_ml_severe/explain/monitor_data_drift.ipynb
@@ -103,6 +103,46 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "875f7424",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     21\n",
+       "1     21\n",
+       "2     21\n",
+       "3     21\n",
+       "4     21\n",
+       "5     21\n",
+       "6     21\n",
+       "7     21\n",
+       "8     21\n",
+       "9     21\n",
+       "10    21\n",
+       "11    21\n",
+       "12    21\n",
+       "13    21\n",
+       "14    21\n",
+       "15    21\n",
+       "16    21\n",
+       "17    21\n",
+       "18    21\n",
+       "Name: Initialization Time, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['Initialization Time']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "08ccfe47",
    "metadata": {},
    "outputs": [],
@@ -112,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d0fb1ca7",
    "metadata": {},
    "outputs": [
@@ -125,7 +165,7 @@
        "        3.44036697,  1.741564  ,  2.55511022,  4.75754803])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "05b5ebc0",
    "metadata": {},
    "outputs": [],
